// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-scrollable css-16rnu1h"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-1ja8h0k"
  >
    Some people are worth melting for.
  </div>
</div>
`;

exports[`props should render smoothScroll 1`] = `
<div
  class="wp-components-scrollable css-aj8r6d"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-1ja8h0k"
  >
    Some people are worth melting for.
  </div>
</div>
`;
